--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "http": "^0.0.1-security",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "pug": "^3.0.2",
+    "socket.io": "^4.7.4",
     "streamifier": "^0.1.1",
     "tinymce": "^6.8.2"
   },
